--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "url": "https://github.com/Myuze/know-more-tiers/issues"
   },
   "homepage": "https://github.com/Myuze/know-more-tiers#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "react-redux": "^7.2.6"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
