--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   },
   "homepage": "https://github.com/Myuze/know-more-tiers#readme",
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.6.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
