--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
+    "particlesjs": "^2.2.3",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
