--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "sass": "^1.45.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "sass": "^1.45.0"
+    "dotenv": "^10.0.0"
   }
 }
