--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-tsparticles": "^1.37.5",
+    "sass": "^1.45.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
